<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black_60"
                android:text="@string/detail_review_label_name"/>
            <FrameLayout
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/detail_review_editText_name"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/black_60"
                    android:textColorHint="@color/black_20"
                    android:maxLines="1" />
            </FrameLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black_60"
                android:text="@string/detail_review_label_date"/>
            <DatePicker
                android:id="@+id/detail_review_datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:theme="@style/CustomDatePicker"
                android:datePickerMode="spinner"/>
            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black_60"
                android:text="@string/detail_review_label_rating"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:gravity="center"
                    android:id="@+id/detail_review_rating_label"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/black_60"
                    tools:text="5/10"/>
                <com.google.android.material.slider.Slider
                    android:id="@+id/detail_review_rating_slider"
                    android:valueFrom="0"
                    android:valueTo="10"
                    android:stepSize="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="16dp"
                android:background="@null"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black_60"
                android:text="@string/detail_review_label_comment"/>
            <FrameLayout
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:background="@null"
                    android:id="@+id/detail_review_editText_comment"
                    android:hint="@string/hint_enter_comment"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black_60"
                    android:textColorHint="@color/black_20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detail_review_submit_btn"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_submit_btn"
                android:gravity="center"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/detail_review_btm_submit"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>